feat: Add initial implementation of Cart component

--- a/app/global.css
+++ b/app/global.css
@@ -14,11 +14,11 @@
   }
 
   .flex-between {
-    @apply flex items-center justify-between;
+    @apply  items-center justify-between;
   }
 
   .flex-start {
-    @apply flex items-start justify-center;
+    @apply items-start justify-center;
   }
 
   .page-padding {
